tests/snapshots/regression/semantic_types__effects__incomplete_handler_error.snap
---
source: tests/integration/regression_snapshots.rs
assertion_line: 132
---
$ flux --no-cache tests/fixtures/semantic_types/effects/incomplete_handler_error.flx
exit_code: 1

[ 1 of 11] Compiling  Assert
[ 2 of 11] Compiling  Array
[ 3 of 11] Compiling  List
[ 4 of 11] Compiling  Either
[ 5 of 11] Compiling  IO
[ 6 of 11] Compiling  Math
[ 7 of 11] Compiling  Numeric
[ 8 of 11] Compiling  Option
[ 9 of 11] Compiling  Primops
[10 of 11] Compiling  String
• 1 error • tests/fixtures/semantic_types/effects/incomplete_handler_error.flx
error[E402]: Missing Effect Handler Arm

Handler for `Console` is missing operations: read.

  tests/fixtures/semantic_types/effects/incomplete_handler_error.flx:7:5
  |
7 |     print("hello") handle Console {
  |     ^^^^^^^^^^^^^^
  |     -------------- handled expression

Hint:
  Add handler arms for all declared operations of the effect.
